...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hwf-ei-hS6">
                                <rect key="frame" x="159.5" y="591" width="56" height="56"/>
                                <accessibility key="accessibilityConfiguration" identifier="rollBtn"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="hwf-ei-hS6" secondAttribute="height" multiplier="1:1" id="mhZ-jC-KtO"/>
                                </constraints>
                                <state key="normal" title="ROLL"/>
                                <connections>
                                    <action selector="rollClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qwn-8s-ZhP"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                    <color key="textColor" red="0.25095880681818183" green="0.25095880681818183" blue="0.25095880681818183" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qaW-Ln-rtU">
                                                    <rect key="frame" x="348" y="22" width="0.0" height="0.0"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="bonusLabel"/>
                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                    <color key="textColor" red="0.45107705467255166" green="0.25374072129897929" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9li-Ks-5rg">
                                                    <rect key="frame" x="360" y="22" width="0.0" height="0.0"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="scoreLabel"/>
                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                                                    <color key="textColor" red="0.8664654356060606" green="0.063923793878446128" blue="0.022453044269356369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kaa-Nc-6PX">
                                                    <rect key="frame" x="47" y="22" width="0.0" height="0.0"/>
...
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="xZB-tO-guD"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ULE-QR-BdX"/>
                                </connections>
                            </tableView>
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="fIq-hq-d6N">
                                <rect key="frame" x="54.5" y="541" width="266.5" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="pinSlider"/>
                            </slider>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hmB-v4-TyL">
                                <rect key="frame" x="367" y="495" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="totalScore"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="28"/>
                                <color key="textColor" red="0.15643752519080445" green="0.37356876792219784" blue="0.82992424242424245" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="version: 100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVN-LN-ZZe">
                                <rect key="frame" x="266.5" y="626" width="92.5" height="21"/>
...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="mySlider" destination="fIq-hq-d6N" id="x98-nu-ipg"/>
                        <outlet property="rollBtn" destination="hwf-ei-hS6" id="0hr-SZ-SmQ"/>
                        <outlet property="rollTableView" destination="FtW-sW-pPz" id="0Vg-vi-lJr"/>
                        <outlet property="totalScore" destination="hmB-v4-TyL" id="OaS-uJ-gIW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
...
